# inotify-cpp

./: CMakeLists.txt  README.md
example/: CMakeLists.txt
include/inotify-cpp/: Inotify.h
source/: Inotify.cpp
